--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ Now I owe them something beautiful.
       </article>
       <article class="poem">
         <h2>Poem Title 21</h2>
-        <p>[Paste your poem text here...]</p>
+        <p>[I am the greatest...]</p>
       </article>
       <article class="poem">
         <h2>Poem Title 22</h2>
