--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ Now I owe them something beautiful.
       </article>
       <article class="poem">
         <h2>Poem Title 24</h2>
-        <p>[Paste your poem text here...]</p>
+        <p>[Messi is the goat...]</p>
       </article>
       <article class="poem">
         <h2>Poem Title 25</h2>
